- Added an option to have Chummer automatically set the lossy compression quality for mugshots in save files instead of using the same, manually defined setting for all images. Using this automatic setting, larger images will be saved with lower Jpeg quality settings because Jpeg artifacts will be less visible in them, while smaller images get saved with higher quality settings.
- If the prompt asking the user if they wish to automatically apply a Chummer updater is dismissed, it no longer re-appears until the user has closed and later re-opened Chummer. 

Data Changes:
- Fixed missing multiplier for Haunted lifestyle quality.
- Fixed missing availability for the BMW Luxus.

Changed/New Strings:
- String_GameplayOption
- String_Lossy_Automatic_Compression_Option
- String_Lossy_Manual_Compression_Option

Deleted Strings:
- String_Lossy_Compression_Option

Build 216
Application Changes:
- The Master Index no longer crashes if a PDF offset is set to a massively high number.
- Fixed a rare crash that might happen on certain systems running Windows 11.

Data Changes:
- Fixed a heinous bug that caused a bunch of sourcebooks to always be enabled no matter what.
- Fixed the page offsets for text search patterns in the PDF scanner 

Changed/New Strings:
- Error_Message_PDF_IndexOutOfBounds
- String_Scanning
- String_Scanning_Pattern
- String_Initializing_Pattern

Build 215
Application Changes:
- Added a Scan Folder for PDF Sourcebooks to Options, so that (to Chummer known) Sourcebooks are automatically found and indexed.
- Fixed a lot of buggy behavior related to opening characters with Chummer from outside the program (e.g. with Windows' "Open with..." function).
- Clicking on "Open PDF" on a Master Index entry with no associated pdf now opens the "Choose PDF" Dialog instead of doing nothing.
- Fixed a crash when Custom Date and/or Time Formats were set to an empty value.