@@ -7839,6 +7839,14 @@
       <text>Restore Defaults</text>
     </string>
     <string>
+      <key>Message_Options_FileIsNotPDF</key>
+      <text>The selected file ({0}) could not be processed as a PDF file. Only PDF files are allowed to be linked to sourcebooks.</text>
+    </string>
+    <string>
+      <key>MessageTitle_Options_FileIsNotPDF</key>
+      <text>File Is Not a PDF</text>
+    </string>
+    <string>
       <key>Label_Options_PDFApplicationPath</key>
       <text>Location of PDF application:</text>
     </string>
