@@ -9,7 +9,8 @@ Application Changes:
 - Adept Powers, AI Programs, Metamagic Arts, Complex Forms, Critter Powers, Mentor Spirits, Metamagics, Spells, and Weapon Mounts should now automatically fetch notes from linked PDFs.
 - Mugshot compression settings should now properly get saved with other global settings.
 - Added an option to have Chummer automatically set the lossy compression quality for mugshots in save files instead of using the same, manually defined setting for all images. Using this automatic setting, larger images will be saved with lower Jpeg quality settings because Jpeg artifacts will be less visible in them, while smaller images get saved with higher quality settings.
-- If the prompt asking the user if they wish to automatically apply a Chummer updater is dismissed, it no longer re-appears until the user has closed and later re-opened Chummer. 
+- If the prompt asking the user if they wish to automatically apply a Chummer updater is dismissed, it no longer re-appears until the user has closed and later re-opened Chummer.
+- Non-PDF files can no longer be linked in as a sourcebook's PDF file.
 
 Data Changes:
 - Fixed missing multiplier for Haunted lifestyle quality.
@@ -19,6 +20,8 @@ Changed/New Strings:
 - String_GameplayOption
 - String_Lossy_Automatic_Compression_Option
 - String_Lossy_Manual_Compression_Option
+- Message_Options_FileIsNotPDF
+- MessageTitle_Options_FileIsNotPDF
 
 Deleted Strings:
 - String_Lossy_Compression_Option
